3 step added for existing repo

--- a/basic-command.html
+++ b/basic-command.html
@@ -6,11 +6,22 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>Only time for new repo</h2>
     <p> git init<br>
-        git add README.md<br>
+        git add README.md (replace README.md with your file name or keep it if you want to add the readme.md file or replace it with the dot(.) for adding all the files to the repo ) <br> 
         git commit -m "first commit"<br>
         git branch -M main<br>
         git remote add origin https://github.com/fiverrtahmid/version-control-system.git<br>
-        git push -u origin main</p>
+        git push -u origin main
+    </p>
+
+    <h2>Then 3 step for the existing repo</h2>
+<ol>
+    <li>git add .</li>
+    <li>git commit -m"comment here"</li>
+    <li>git push</li>
+</ol>
+
+    <p>Shortcut key: w + q for get out from the issue in terminal</p>
 </body>
 </html>
